--- a/adaptiv/gui.css
+++ b/adaptiv/gui.css
@@ -5,25 +5,70 @@
 }
 
 body {
-  background-color: cornflowerblue;
+  background-color: white;
+  overflow-x: hidden;
 }
 header {
-  background-color: blue;
+  background-color: rgb(56, 56, 56);
   display: flex;
   justify-content: center;
-  justify-content: space-between;
+  padding: 21px 35px;
 }
 
 header > nav > a {
   text-decoration: none;
   font-size: 17px;
   margin: 10px;
-  color: white;
+  color: rgb(183, 183, 183);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-
 }
 header > i {
   color: white;
-  font-size: 23px;
+  font-size: 24px;
+}
+
+#menu {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    padding: 13px 20px;
+  }
+  header > i {
+    font-size: 22px;
+  }
+  header > nav > a {
+    font-size: 18px;
+    margin-left: 10px;
+  }
+}
+@media screen and (max-width: 414px) {
+  header {
+    padding: 13px 20px;
+    position: relative;
+    justify-content: space-between;
+  }
+  header > i {
+    font-size: 20px;
+  }
+  header > nav > a {
+    font-size: 14px;
+    margin: 0px;
+  }
+  #menu {
+    display: block;
+  }
+  header > nav {
+    background: rgb(56, 56, 56);
+    position: absolute;
+    top: 100%;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+    transition: right 0.5s;
+  }
 }
