--- a/adaptiv/gui.css
+++ b/adaptiv/gui.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: rgb(201, 200, 200);
   overflow-x: hidden;
 }
 header {
@@ -31,7 +31,35 @@ header > i {
 #menu {
   display: none;
 }
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  margin: 10px;
+}
 
+main > div {
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+main > div > img {
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: top;
+}
+main > div > p {
+  font-size: 20px;
+  margin-top: 5%;
+}
+main > div > h2 {
+  font-size: 24px;
+  margin-top: 5px;
+}
 @media screen and (max-width: 768px) {
   header {
     padding: 13px 20px;
@@ -42,6 +70,17 @@ header > i {
   header > nav > a {
     font-size: 18px;
     margin-left: 10px;
+  }
+  main > div > p {
+    font-size: 18px;
+  }
+  main > div > h2 {
+    font-size: 20px;
+  }
+  main {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
   }
 }
 @media screen and (max-width: 414px) {
@@ -70,5 +109,18 @@ header > i {
     padding: 10px;
     gap: 10px;
     transition: right 0.5s;
+  }
+  main {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 12px;
+    grid-row-gap: 12px;
+  }
+  main > div > p {
+    font-size: 16px;
+    margin-top: 15px;
+  }
+  main > div > h2 {
+    font-size: 18px;
+    margin-top: 10px;
   }
 }
