--- a/api/style.css
+++ b/api/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: ;
+    background-color: white ;
     display: flex;
     flex-direction: column;
     align-items: center;
