--- a/carusel/style.css
+++ b/carusel/style.css
@@ -14,11 +14,13 @@ nav {
 div {
   display: flex;
 
-  gap: 10px;
-  transform: translateX(-100px);
+  /* gap: 10px; */
+  transform: translateX(0%);
+  transition: all 0.5s;
 }
 img {
   width: 50%;
   aspect-ratio: 16/9;
   object-fit: cover;
 }
+
